# queriously

./: .gitignore  README.md  TODO.md  index.html  package.json  tailwind.config.ts
apps/marketing/: package-lock.json  package.json
apps/marketing/src/: App.tsx  index.css
apps/marketing/src/components/: AppShellMock.tsx  app-shell-mock.css
python/: main.py  requirements.txt
python/core/: llm.py  reading_modes.py
python/routers/: config.py  qa.py
python/tests/: test_sidecar_config.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  hashing.rs  lib.rs  paths.rs  sidecar.rs
src-tauri/src/commands/: ai.rs  config.rs  mod.rs  pdf.rs  sessions.rs
src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  ReadingModeSelector.tsx  SourceCitation.tsx
src/components/layout/: RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/onboarding/: OnboardingModal.tsx
src/components/pdf/: AnnotationLayer.tsx  FloatingToolbar.tsx  PDFViewer.tsx  PdfPage.tsx
src/components/sessions/: SessionPanel.tsx
src/components/ui/: Logo.tsx
src/hooks/: useChat.ts  useLlmConfig.ts  useMarginalia.ts  usePdf.ts
src/lib/: pdfjs.ts  selectionRects.ts  tauri.ts
src/store/: annotationStore.ts  chatStore.ts  marginaliaStore.ts  pdfStore.ts  sessionStore.ts  settingsStore.ts
src/styles/: globals.css
