[package]
name = "queriously"
version = "0.1.0"
description = "Queriously — Research Copilot"
authors = ["Queriously"]
edition = "2021"

[lib]
name = "queriously_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
parking_lot = "0.12"
futures-util = "0.3"
